
The same code modifications included a change to the indirect computation
with caching switched off (-aa 0).  Whereas before, the number of secondary
rays after the first bounce were half of the previous generation, they are
now determined by the surface reflectance, making for a better and faster
calculation.  It should now be possible to compute many bounces with -aa 0,
which used to be prohibitively expensive.

Added -T option to xshowtrace to trace rays to light sources.

Added meta2bmp program to produce BMP files from metafile graphics.

Added cct_x(t) and cct_y(t) to src/cal/cal/blackbody.cal to interpolate
CIE chromaticities for particular black-body temperatures.

Increased maximum number of input pictures in pcomb and pcompos to 512.

Created rtcontrib program for computing ray contribution coefficients.
This tool may be used to do standard optical ray tracing or daylight
coefficient calculations for annual simulations, among other uses.

Added tilde ('~') output option as part of the -o* specification of
rtrace.  This permits ray trees to be parsed more easily in binary
output mode, as needed by rtcontrib.

Implemented Russian roulette ray termination with -lr <= 0.
Made -lr -10 the default in rtcontrib.

Made rtcontrib -f option search RAYPATH directories.

Made it so -o option of rtcontrib can pipe -o output to a command.

Added -if and -of options to total for binary i/o (following rcalc mold).

Switched default options in rtrace to use Russian roulette.  (Rpict and rvu
still use biased ray termination.)

Added rtcontrib -r option to recover partial output.

Added -u rendering option for pure Monte Carlo sampling.
(Got rid of -DMC compile option, which this makes superfluous.)

Changed -t option of rlam to accept strings as well as single characters.

Fixed bug in rcalc with -l option where it would sometimes go into an
infinite loop.

Fixed truly ancient bug in bounding box computation for cones, which
could (and did) cause missing segments.